# odo_orchestrator

./: .env-dist  CHANGELOG.md  Cargo.toml
.github/workflows/: release-please.yml
src/: main.rs
src/adapters/: aws_config.rs  aws_polly_adapter.rs  aws_repository.rs  mod.rs  silverlining_adapter.rs
src/api/: mod.rs  routes.rs
src/domain/: audio.rs  audio_service.rs  mod.rs
src/domain/ports/: audio_repository.rs  mod.rs  qr_code_service.rs  text_to_speech_service.rs
