[package]
name = "odo_orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.83"
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-polly = "1.43.0"
aws-sdk-s3 = "1.48.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
